Windows fix for clipping off bottom descenders of header text

--- a/src/sass/base/vd-tweaks.scss
+++ b/src/sass/base/vd-tweaks.scss
@@ -67,6 +67,7 @@ a:focus h1 {
 .au-body .au-display-xxxl, .au-display-xxxl{
 	font-size: 2.6rem;
 	letter-spacing: -0.03rem;
+	line-height: normal;
 	@include AU-media( xs ) {
 		font-size: 3.3rem;
 	}
